--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,7 +1,17 @@
 .header {
+    padding-bottom: 1rem;
     display: flex;
+    flex-direction: column;
     text-align: center;
-    justify-content: space-between;
-    background-color: bisque;
-    padding: 5%;
+    justify-content:center;
+    background-color: rgb(186, 168, 242);
+}
+
+.b {
+    margin: 0 1rem;
+    padding: 1%;
+    color: black;
+    background-color: rgb(96, 81, 192);
+    text-decoration: none;
+    border-radius: 25%;
 }
