--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -5,6 +5,8 @@
     text-align: center;
     justify-content:center;
     background-color: rgb(186, 168, 242);
+    margin-bottom: 20px;
+
 }
 
 .b {
